--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oxente Café</title>
+    <script src="https://widget.cloudinary.com/v2.0/global/all.js"></script>
   </head>
   <body>
     <div id="root"></div>
